--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>PrimeOne</title>
 </head>
 
-<body>
+<body class="webp">
 	<header class="header">
 		<div class="content">
 			<div class="header__body">
